welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:46: error: Unit does not take parameters
  rediago()
         ^